syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Grpc.Server";

package greet;

service Greeter {
    rpc GetGreeting (GetGreetingRequest) returns (GetGreetingResponse);
}

message GetGreetingRequest {}

message GetGreetingResponse {
    repeated int32 amounts = 1;
    int32 size = 2;
    repeated Item items = 3;
    google.protobuf.Timestamp order_date = 4;
}

message Item {
    int32 weight = 1;
    string description = 2;
}
